environments/gloo-edge/gateway-api/standalone/httpbin-app/base/httpbin-delegate-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-delegate-route
  namespace: httpbin
spec:
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: httpbin
          port: 8000
          weight: 100
        - name: httpbin-preview
          port: 8000
          weight: 0
